--- a/index.html
+++ b/index.html
@@ -5,13 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our team</title>
-    <link rel="stylesheet" href="./assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/style.css">
 
 </head>
 
 <body>
+    <main>
+        <div class="container">
+            <div class="row align-items" id="jumbotron">
+                <div class="col">
+                    <div class="h-100 p-5">
+                        <h1 class="text-center text-danger my-5">Meet our Team</h1>
+                        <p class="text-center my-5">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores perferendis libero magnam
+                            doloribus, debitis hic tempore? Iure consequuntur eaque similique, fugiat beatae voluptas
+                            laudantium fuga debitis a repudiandae, harum molestias!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+            </div>
+        </div>
+
+    </main>
+    <!-- /main -->
     <script src="./assets/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
