--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Our team</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/style.css">
 
 </head>
@@ -29,7 +26,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row g-5 gap-5" id="member_list">
+
+
 
             </div>
         </div>
