--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-5 gap-5" id="member_list">
+            <div class="row" id="member_list">
 
 
 
