add root and queries with bootstrap

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row align-items" id="jumbotron">
                 <div class="col">
                     <div class="h-100 p-5">
-                        <h1 class="text-center text-danger my-5">Meet our Team</h1>
+                        <h1 class="text-center my-5">Meet our Team</h1>
                         <p class="text-center my-5">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores perferendis libero magnam
                             doloribus, debitis hic tempore? Iure consequuntur eaque similique, fugiat beatae voluptas
@@ -27,12 +27,8 @@
                 </div>
             </div>
             <div class="row" id="member_list">
-
-
-
             </div>
         </div>
-
     </main>
     <!-- /main -->
     <script src="./assets/script.js"></script>
