--- a/index.html
+++ b/index.html
@@ -28,7 +28,39 @@
             </div>
             <div class="row" id="member_list">
             </div>
+            <h1 class="text-center my-5">Add member</h1>
+            <form action="" class="row">
+                <div class="mb-3 col-6">
+                    <label for="" class="form-label">Name</label>
+                    <input type="text" class="form-control" name="user_name" id="user_name"
+                        aria-describedby="name_helpId" placeholder="" />
+                    <small id="name_helpId" class="form-text text-muted">Type your name</small>
+                </div>
+                <div class="mb-3 col-6">
+                    <label for="" class="form-label">Role</label>
+                    <input type="text" class="form-control" name="user_role" id="user_role"
+                        aria-describedby="role_helpId" placeholder="" />
+                    <small id="role_helpId" class="form-text text-muted">Type your role in the company</small>
+                </div>
+                <div class="mb-3 col-6">
+                    <label for="" class="form-label">E-mail</label>
+                    <input type="text" class="form-control" name="user_mail" id="user_mail"
+                        aria-describedby="email_helpId" placeholder="" />
+                    <small id="email_helpId" class="form-text text-muted">Type your email address</small>
+                </div>
+                <div class="mb-3 col-6">
+                    <label for="" class="form-label">Image</label>
+                    <input type="text" class="form-control" name="user_img" id="user_img" aria-describedby="img_helpId"
+                        placeholder="" />
+                    <small id="img_helpId" class="form-text text-muted">Insert your image file or url</small>
+                </div>
+                <div class="mb-3 col-12 text-center">
+                    <a class="btn btn-primary btn-sm " href="#" role="button">Invia</a>
+                </div>
+            </form>
         </div>
+
+
     </main>
     <!-- /main -->
     <script src="./assets/script.js"></script>
