--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <small id="img_helpId" class="form-text text-muted">Insert your image file or url</small>
                 </div>
                 <div class="mb-3 col-12 text-center">
-                    <a class="btn btn-primary btn-sm " href="#" role="button">Invia</a>
+                    <button type="submit" class="btn btn-primary">Invia</button>
                 </div>
             </form>
         </div>
@@ -63,6 +63,7 @@
 
     </main>
     <!-- /main -->
+    <script src="./assets/functions.js"></script>
     <script src="./assets/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
